# adb-fs

./: .gitignore  .mdc  .todo  README.md  adb_manager.py  build.sh  main.py  pyproject.toml
adb-fs-tkinter/: adb_manager.py  file_manager.py  main.py  utils.py
adbfs-toga/: CHANGELOG  LICENSE  README.rst  build.sh  download_adb.py  pyproject.toml
adbfs-toga/icons/: adbfs.icns
adbfs-toga/src/adbfs/: __main__.py  adb_manager.py  app.py  file_manager.py  utils.py
