[project]
name = "adb-fs"
version = "1.0.0"
description = "ADB File System Manager - Android 디바이스 파일 관리 GUI 애플리케이션"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # tkinter는 Python 표준 라이브러리이므로 별도 설치 불필요
    "pyinstaller>=6.16.0",
]
keywords = ["adb", "android", "file-manager", "gui", "tkinter"]
authors = [
    {name = "ADB-FS Team", email = "contact@adb-fs.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/adb-fs/adb-fs"
Repository = "https://github.com/adb-fs/adb-fs"
Issues = "https://github.com/adb-fs/adb-fs/issues"

[project.scripts]
adb-fs = "main:main"
